cmake_minimum_required(VERSION 3.25)
get_filename_component(ProjectId ${CMAKE_CURRENT_SOURCE_DIR} NAME)
project(${ProjectId})

add_compile_definitions("SOURCE_ROOT=${CMAKE_CURRENT_SOURCE_DIR}")

# How to set the variable during configuration time:
# cmake -DTCHECKER_BIN_PATH="/path/to/tChecker/bin"
set(TCHECKER_BIN_PATH "/" CACHE STRING "The path to the bin directory of tChecker")
add_compile_definitions("TCHECKER_BIN=${TCHECKER_BIN_PATH}")

include(FetchContent)

FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.2/json.tar.xz)
FetchContent_MakeAvailable(json)

set(CMAKE_CXX_STANDARD 17)

# find Flex and Bison
find_package(FLEX REQUIRED)
find_package(BISON REQUIRED)

# set source file path for parser
set(TO_PARSER_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/headers/TAHeaders/TATileHeaders/parserOfTO)
message(STATUS "TO_PARSER_SRC_DIR: ${TO_PARSER_SRC_DIR}")

# Bison: process TOParser.y file，gen TOParser.cpp and TOParser.hpp
BISON_TARGET(TOParser ${TO_PARSER_SRC_DIR}/TOParser.y ${TO_PARSER_SRC_DIR}/TOParser.cpp
    COMPILE_FLAGS "--defines=${TO_PARSER_SRC_DIR}/TOParser.hpp")

# Flex: process TOLexer.l file，gen TOLexer.cpp
FLEX_TARGET(TOScanner ${TO_PARSER_SRC_DIR}/TOLexer.l ${TO_PARSER_SRC_DIR}/TOLexer.cpp)

# ensure flex depends on bison
ADD_FLEX_BISON_DEPENDENCY(TOScanner TOParser)

file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/inputFiles)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/inputTiles)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/inputTiles/accTiles)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/inputTiles/binTiles)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/inputTiles/triTiles)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/executables)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/outputs)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/outputs/outputFiles)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/outputs/outputFilesForChecking)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/outputs/outputPDFs)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/outputs/outputDOTs)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/outputs/logs)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/outputs/logs/outputFilesForCheckingLogs)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/outputs/logs/testingResults)
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/outputs/logs/testingResourceUsage)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/executables)

set(SOURCES src/converter.cpp src/checker.cpp src/grapher.cpp src/constructor.cpp src/tester.cpp)
foreach (source IN LISTS SOURCES)
    get_filename_component(executable_name ${source} NAME_WE)
    add_executable(${executable_name} ${source})
    target_include_directories(${executable_name} PUBLIC headers)
    target_link_libraries(${executable_name} nlohmann_json::nlohmann_json)
endforeach ()

add_executable(parser
    src/parser.cpp
    ${BISON_TOParser_OUTPUTS}  # TOParser.cpp generated by Bison
    ${FLEX_TOScanner_OUTPUTS}  # TOLexer.cpp generated by Flex
)

target_include_directories(parser PUBLIC headers)
target_link_libraries(parser nlohmann_json::nlohmann_json fl)

execute_process(COMMAND chmod +x ${CMAKE_CURRENT_SOURCE_DIR}/scriptsForChecks/gt2C.sh)
execute_process(COMMAND chmod +x ${CMAKE_CURRENT_SOURCE_DIR}/scriptsForChecks/lt2CCycle.sh)
execute_process(COMMAND chmod +x ${CMAKE_CURRENT_SOURCE_DIR}/scriptsForChecks/lt2CScale.sh)
execute_process(COMMAND chmod +x ${CMAKE_CURRENT_SOURCE_DIR}/scriptsForChecks/tCheckerLiveness.sh)
execute_process(COMMAND chmod +x ${CMAKE_CURRENT_SOURCE_DIR}/scripts/collectResults.sh)
execute_process(COMMAND chmod +x ${CMAKE_CURRENT_SOURCE_DIR}/scripts/getParameterValue.sh)

add_custom_target(rgp ALL # re generate parser(delete generated files and re generate)
    COMMAND ${CMAKE_COMMAND} -E rm -f ${TO_PARSER_SRC_DIR}/TOLexer.cpp ${TO_PARSER_SRC_DIR}/TOParser.cpp ${TO_PARSER_SRC_DIR}/TOParser.hpp
    COMMENT "Cleaning flex/bison generated files"
)

add_dependencies(parser rgp)